2006-11-04  Akim Demaille  <akim@lrde.epita.fr>

	Automake 1.10 compatibility
	* src/Makefile.am: Use init.mk.
	Use newer svn-externals.
	* configure.ac: Automake 1.10 includes $(SHELL) in $(install_sh),
	so do not add another.

2006-11-03  Jean-Christophe Baillie  <baillie@gostai.com>

	whenever support add, fix bug in at (forgot to call normalForm) 

	* src/ucommand.cc: add support for whenever.
	* src/ucommand.h: add support for whenever.
	* src/userver.cc: remove unecessary debug ouput.

2006-11-01  Akim Demaille  <akim@lrde.epita.fr>

	Use URBI_LIBPORT
	* configure.ac: Here.

2006-11-01  Jean-Christophe Baillie  <baillie@gostai.com>

	fix "exec" bug 

	* src/parser/bison/utoken.l: fix UString lenght with STRING
        token.
	* src/uexpression.cc: nothing.
	* src/ustring.cc: formating changes.
	* src/ustring.h: add setLen, used by utoken.l to adjust the 
        length of the UString.

2006-11-01  Jean-Christophe Baillie  <baillie@gostai.com>

	formating changes 

	* src/ucommand.cc: indent.
	* src/parser/bison/ugrammar.y: remove comments.

2006-11-01  Jean-Christophe Baillie  <baillie@gostai.com>

	Remove obsolete 'eventid' attribute in UValue 

	* src/uvalue.cc: do it.

2006-11-01  Jean-Christophe Baillie  <baillie@gostai.com>

	Code reindent and force coding style

	* src/ucommand.cc: do it.
	* src/uvalue.h: do it.
	* src/ucommand.h: do it.
	* src/parser/bison/ugrammar.y: do it.
	* src/uexpression.cc: do it.
	* src/uvalue.cc: do it.
	* src/uvariable.cc: do it.
	* src/userver.cc: do it.
	* src/uobj.cc: do it.
	* src/uvariablename.cc: do it.
	* src/uvariable.h: do it.
	* src/uvariablename.h: do it.
	* src/uconnection.cc: do it.

2006-10-31  Matthieu Nottale  <nottale@gostai.com>

	Rename Connection* to connection* 

	* src/network/bsdnet/Connection.cc: Remove.
	* src/network/bsdnet/connection.cc: New.
	* src/network/bsdnet/Connection.h: Remove.
	* src/network/bsdnet/bsdnet.mk: .
	* src/network/bsdnet/network.cc: .
	* src/network/bsdnet/connection.hh: New.
