@@ -1,3 +1,12 @@
+2006-11-04  Jean-Christophe Baillie  <baillie@gostai.com>
+
+	fix string unarmor bug 
+	* src/parser/bison/utoken.l: STRING token now calls UString::unArmor().
+	* src/ustring.cc: add unArmor/armor (armor not implemented yet).
+	* src/ustring.h: add defs.
+	* src/uvalue.cc: change UValue::echo for DATA_STRING; no processing
+        required anymore.
+
 2006-11-04  Akim Demaille  <akim@lrde.epita.fr>
 
 	Automake 1.10 compatibility
